style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding:0;
}

body {
    font-family: 'Roboto', sans-serif;
    background-image: url(./background_image1.jpg);
    background-size:repeat;
}

h1, h2, h3 {
    margin-bottom: 15px;
}

.navbar {
    /* background-color: silver; */
    background-image: url(./navbar_background.png);
    background-size:contain;
    border-bottom: 2px solid #1f2937 ;
    color: white;
}

#sticky {
    position: sticky;
    top:0;
    z-index: 999;
}

.navbar .container {
    display: flex;
    height: 60px;
    justify-content: space-between;
    align-items: center;
}

.container {
    padding: 0 30px;
    max-width: 1100px;
    margin: 0 auto;
}

.logo {
    font-size: xx-large;
    font-weight: bold;
    font-style:oblique;
}

.navbar .nav {
    list-style: none;
    display: flex;
    justify-content: baseline;
    gap: 26px;

}

a {
    text-decoration: none;
}

.nav a {
    color: white;
    font-size: 20px;
    font-weight: bold;
}

.nav a:hover {
    background-color: silver;
    border-radius: 4px;
}


.header, .footer {
    background-color: #1f2937;
}

.header .container {
    min-height: 400px;
    display: flex;
    justify-content: center;
    align-items: center;

}

@media (max-width: 800px) {
    .header .container {
        flex-wrap: wrap;
    }
    
    .header .header-title {
        text-align: center;
    }
}

.header p {
    font-family:monospace;
    font-size: 16px;
}

.container h1 {
    font-size: 3rem;
}

.container #site-presentation {
    color: white;

}

.container img {
    max-width: 300px;
    height: auto;
    padding: 1em;
    padding-bottom: 0;
}

.review-boxes {
    min-height: 400px;
    padding: 30px;
}

.review-boxes #review-section-title {
    /* font-size: 3rem; */
    text-align: center;
    background-color: silver;
    opacity: 0.9;
    margin: -30px -30px 32px;
    padding: 12px;
    font-size: 36px;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.review-boxes .container {
    display: flex; 
    justify-content: center;
    gap: 62px;
    max-width: fit-content;
    flex-wrap: wrap;
    margin-top: 120px;
    margin-bottom: 120px;
}

.review-boxes p {
    text-align: center;
}

.box {
    width:400px;
    height: 400px;
    transition-duration: 2s;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 24px;
    color: #1f2937;
    border-radius: 8px;
}

.box:hover {
    box-shadow: 30px 30px 60px rgba(0, 0, 0, 0.8);
}

.box#movie1 {
    background-image: url(./2001_img.jpg);
    background-size:cover;
    background-position: left;
}

.box#movie2 {
    background-image: url(./terminator.jpg);
    background-size:cover;
    background-position: left;
}

.box#movie3 {
    background-image: url(./blood_diamond.jpg);
    background-size:cover;
    background-position: left;
}

.box#movie4 {
    background-image: url(./they_cloned_tyrone.jpg);
    background-size:cover;
    background-position: left;
}

.box#movie1:hover {
    background-image: url(./2001_img.jpg);
    background-size:cover;
    background-position:center;
    color: black ;
    text-shadow: 8px 8px 10px white;
}
 
.box#movie2:hover {
    background-image: url(./terminator.jpg);
    background-size:cover;
    background-position: center;
    color: white ;
    text-shadow: 8px 8px 10px black;
}

.box#movie3:hover {
    background-image: url(./blood_diamond.jpg);
    background-size:cover;
    background-position: center;
    color: white ;
    text-shadow: 8px 8px 10px black;
}

.box#movie4:hover {
    background-image: url(./they_cloned_tyrone.jpg);
    background-size:cover;
    background-position: center;
    color: white ;   
    text-shadow: 8px 8px 10px black;
} 

.quote-container {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align:justify;
    font-size: 36px;
    font-weight: lighter;
    padding: 100px;
    background-color: #e5e7eb;
}

.quote-card {
    color:#1f2937;
    max-width: 100dvh;
    font-family: 'Times New Roman', Times, serif;

}
.quote-card #quote {
    font-style: italic;
    font-weight: 300;
    line-height: 1.5;
    padding-bottom: 10px;
}

#author {
    font-size: x-large;
    text-align: end;
    font-weight: 500;
}
.music-card-container {
    display: flex;
    justify-content: center;
    padding: 48px;
}

.music-card-text {
    display: flex;
    flex-direction: column;
    color: white;
    padding: 24px;
    text-align: justify;
    font-weight: 600;
    width: 350px;
    background-image: url(./green_music_background.jpg);
    background-position: top;
    background-size: cover;
    opacity: 0.9;
    border-radius: 12px;
    align-items: center;
    box-shadow: 10px 30px 30px lightgreen;
    font-family:monospace;
    line-height: 1.0;
    margin-top: 100px;
    margin-bottom: 100px;
}

.music-card-text h3{
    font-size: x-large;
}
.music-card-text p{
    font-size:medium;
}

.button {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 8px;
    margin-top: 12px;
    width: fit-content;
    border-radius: 10px;
    font-family: 'roboto';
    font-weight: bold;
}

.button:hover {
    background-color: lightgreen;
}

 .button #spotify-icon {
    padding-right: 6px;
    padding-left: 6px;
}


.footer {
    text-align: center;
    color: white;
    font-family: 'Times New Roman', Times, serif;
    padding: 6px;
    font-size: small;
    position: fixed;
    bottom: 0;
    width: 100%;
}

/*This part will style the review pages sections.*/

.container#review-text {
    background-color: white;
    padding: 20px;
    opacity: 0.9;
    border-radius: 40px;
    gap: 0;
    border: 2px solid red;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;

}

#review-text p {
    text-align: justify;
    text-indent: 50px;
}
p {
    margin: 4px;
}

#reviewpage-subtitle {
    font-style: italic;
}

#review-references {
    margin-top: 36px;
}

